PageViewportController::m_rawAttributes.devicePixelRatio is not initialized https://bugs.webkit.org/show_bug.cgi?id=99751

Patch by Yael Aharon <yael.aharon@intel.com> on 2012-10-18
Reviewed by Antonio Gomes.

PageViewportController::m_rawAttributes.devicePixelRatio needs to be initialized.
Due to race condition, we could set the viewport attributes before the first layout.
If that happens, PageViewportController::m_rawAttributes.devicePixelRatio
is used without being initialized.

* UIProcess/PageViewportController.cpp:
(WebKit::PageViewportController::PageViewportController):

Canonical link: https://commits.webkit.org/117741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131802 268f45cc-cd09-0410-ab3c-d52691b4dbfc